fix left-padding overflow problem on individual speaker pages between 768px and 992px device width resolutions

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -861,6 +861,7 @@ footer {
 		max-width: 640px;
 		@include mq(sm) {
 			display: inline-block;
+      padding-left: 75px;
 		}
 	}
 
